[#IOPAE-62] Last migration date (#45)
